@@ -34,7 +34,7 @@
 
 	<groupId>org.jmxtrans</groupId>
 	<artifactId>jmxtrans-parent</artifactId>
-	<version>271-SNAPSHOT</version>
+	<version>273-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>JmxTrans - parent project</name>
 	<description>JMX metrics exporter</description>
@@ -131,7 +131,7 @@
 	</distributionManagement>
 	<properties>
 		<animal-sniffer.version>1.16</animal-sniffer.version>
-		<aws.java.sdk.version>1.11.228</aws.java.sdk.version>
+		<aws.java.sdk.version>1.11.428</aws.java.sdk.version>
 		<!--
 			Maximum number of checkstyle violations allowed. Build will fail
 			if there are more than this number of violations. Feel free to
@@ -140,12 +140,15 @@
 		-->
 		<checkstyle.max.allowed.violations>0</checkstyle.max.allowed.violations>
 		<github.global.server>github</github.global.server>
-		<jackson.version>2.8.9</jackson.version>
+		<jackson-bom.version>2.12.0</jackson-bom.version>
+		<java.version>1.8</java.version>
 		<jsw.dir>${project.build.directory}/generated-resources/appassembler/jsw/${package.daemon.name}</jsw.dir>
-		<kafka.version>0.11.0.1</kafka.version>
+		<kafka.version>1.1.1</kafka.version>
 		<logback.version>1.2.3</logback.version>
 		<main.class>com.googlecode.jmxtrans.JmxTransformer</main.class>
 		<maven.build.timestamp.format>yyMMdd_HHmm</maven.build.timestamp.format>
+		<maven.compiler.source>${java.version}</maven.compiler.source>
+		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<package.daemon.name>${project.artifactId}</package.daemon.name>
 		<package.group>${project.artifactId}</package.group>
 		<package.install.dir>/usr/share/${project.artifactId}</package.install.dir>
@@ -194,36 +197,6 @@
 				<version>1.72</version>
 			</dependency>
 			<dependency>
-				<groupId>com.fasterxml.jackson.core</groupId>
-				<artifactId>jackson-annotations</artifactId>
-				<version>${jackson.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.fasterxml.jackson.core</groupId>
-				<artifactId>jackson-core</artifactId>
-				<version>${jackson.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.fasterxml.jackson.core</groupId>
-				<artifactId>jackson-databind</artifactId>
-				<version>${jackson.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.fasterxml.jackson.dataformat</groupId>
-				<artifactId>jackson-dataformat-yaml</artifactId>
-				<version>${jackson.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.fasterxml.jackson.datatype</groupId>
-				<artifactId>jackson-datatype-guava</artifactId>
-				<version>${jackson.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.fasterxml.jackson.module</groupId>
-				<artifactId>jackson-module-guice</artifactId>
-				<version>${jackson.version}</version>
-			</dependency>
-			<dependency>
 				<groupId>com.github.chrisvest</groupId>
 				<artifactId>stormpot</artifactId>
 				<version>2.4.1</version>
@@ -236,8 +209,7 @@
 			<dependency>
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
-				<!-- guava 20.0 is the last Java 7 compatible version -->
-				<version>19.0</version>
+				<version>30.1.1-jre</version>
 			</dependency>
 			<dependency>
 				<groupId>com.google.inject</groupId>
@@ -301,7 +273,7 @@
 			</dependency>
 			<dependency>
 				<groupId>org.apache.kafka</groupId>
-				<artifactId>kafka_2.11</artifactId>
+				<artifactId>kafka_2.12</artifactId>
 				<version>${kafka.version}</version>
 				<exclusions>
 					<exclusion>
@@ -318,7 +290,7 @@
 			<dependency>
 				<groupId>org.apache.zookeeper</groupId>
 				<artifactId>zookeeper</artifactId>
-				<version>3.4.10</version>
+				<version>3.4.14</version>
 				<exclusions>
 					<exclusion>
 						<groupId>log4j</groupId>
@@ -344,7 +316,7 @@
 			<dependency>
 				<groupId>org.influxdb</groupId>
 				<artifactId>influxdb-java</artifactId>
-				<version>2.7</version>
+				<version>2.21</version>
 			</dependency>
 			<dependency>
 				<groupId>org.jhades</groupId>
@@ -438,12 +410,7 @@
 				<version>1.5.9</version>
 			</dependency>
 			<dependency>
-				<groupId>org.quartz-scheduler</groupId>
-				<artifactId>quartz</artifactId>
-				<version>1.8.6</version>
-			</dependency>
-			<dependency>
-				<!-- quartz and jmxtrans-output-log4j depend on log4j -->
+				<!-- jmxtrans-output-log4j depend on log4j -->
 				<groupId>org.slf4j</groupId>
 				<artifactId>log4j-over-slf4j</artifactId>
 				<version>${slf4j.version}</version>
@@ -463,7 +430,7 @@
 			<dependency>
 				<groupId>org.projectlombok</groupId>
 				<artifactId>lombok</artifactId>
-				<version>1.16.18</version>
+				<version>1.18.10</version>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
@@ -476,9 +443,16 @@
 				<scope>runtime</scope>
 			</dependency>
 			<dependency>
+				<groupId>com.fasterxml.jackson</groupId>
+				<artifactId>jackson-bom</artifactId>
+				<version>${jackson-bom.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
 				<groupId>com.github.tomakehurst</groupId>
-				<artifactId>wiremock</artifactId>
-				<version>2.8.0</version>
+				<artifactId>wiremock-jre8</artifactId>
+				<version>2.27.2</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
@@ -490,7 +464,7 @@
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
-				<version>4.12</version>
+				<version>4.13.1</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
@@ -758,11 +732,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.7.0</version>
-					<configuration>
-						<source>1.7</source>
-						<target>1.7</target>
-					</configuration>
+					<version>3.8.1</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -803,7 +773,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-failsafe-plugin</artifactId>
-					<version>2.20</version>
+					<version>3.0.0-M3</version>
 					<configuration>
 						<groups>com.googlecode.jmxtrans.test.IntegrationTest</groups>
 					</configuration>
@@ -947,8 +917,9 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.20</version>
+					<version>3.0.0-M3</version>
 					<configuration>
+						<useSystemClassLoader>false</useSystemClassLoader>
 						<includes>
 							<include>**/Test*.java</include>
 							<include>**/*Test.java</include>
@@ -960,7 +931,7 @@
 				<plugin>
 					<groupId>org.basepom.maven</groupId>
 					<artifactId>duplicate-finder-maven-plugin</artifactId>
-					<version>1.3.0</version>
+					<version>1.5.0</version>
 					<configuration>
 						<failBuildInCaseOfDifferentContentConflict>true</failBuildInCaseOfDifferentContentConflict>
 						<failBuildInCaseOfEqualContentConflict>false</failBuildInCaseOfEqualContentConflict>
@@ -983,7 +954,7 @@
 					<configuration>
 						<signature>
 							<groupId>org.codehaus.mojo.signature</groupId>
-							<artifactId>java17</artifactId>
+							<artifactId>java18</artifactId>
 							<version>1.0</version>
 						</signature>
 					</configuration>
@@ -1037,7 +1008,7 @@
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>rpm-maven-plugin</artifactId>
-					<version>2.1.5</version>
+					<version>2.2.0</version>
 				</plugin>
 				<plugin>
 					<groupId>org.pitest</groupId>
@@ -1173,9 +1144,9 @@
 					<links>
 						<link>http://docs.oracle.com/javase/6/docs/api</link>
 						<link>http://commons.apache.org/pool/api-1.6</link>
-						<link>http://fasterxml.github.io/jackson-annotations/javadoc/2.4</link>
-						<link>http://fasterxml.github.io/jackson-core/javadoc/2.4</link>
-						<link>http://fasterxml.github.io/jackson-databind/javadoc/2.4</link>
+						<link>http://fasterxml.github.io/jackson-annotations/javadoc/2.12</link>
+						<link>http://fasterxml.github.io/jackson-core/javadoc/2.12</link>
+						<link>http://fasterxml.github.io/jackson-databind/javadoc/2.12</link>
 						<link>http://docs.guava-libraries.googlecode.com/git-history/release/javadoc</link>
 					</links>
 				</configuration>
@@ -1191,7 +1162,7 @@
 				<version>3.8</version>
 				<configuration>
 					<sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
-					<targetJdk>1.7</targetJdk>
+					<targetJdk>${java.version}</targetJdk>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -1214,7 +1185,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-report-plugin</artifactId>
-				<version>2.20</version>
+				<version>3.0.0-M3</version>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -1350,11 +1321,6 @@
 						<plugin>
 							<groupId>org.pitest</groupId>
 							<artifactId>pitest-maven</artifactId>
-							<configuration>
-								<jvmArgs>
-									<value>-XX:MaxPermSize=256M</value>
-								</jvmArgs>
-							</configuration>
 						</plugin>
 					</plugins>
 				</pluginManagement>
